# rafthercal

./: .gitignore  MANIFEST.in  README.md  cal.py  config.py.sample  google_cal.py  google_tasks.py  install.txt  pyproject.toml  requirements.in  requirements.txt  run.sh  todo.py  todoist.py  weather.sh  web_config.py
scripts/: install-rafthercal  restart-rafthercal  run-rafthercal  update-rafthercal
src/: calendar_plugin.py  config.py.sample  image_plugin.py  loader.py  owner_plugin.py  plugin.py  rafthercal.py  system_plugin.py
src/rafthercal/: __main__.py  calendar_plugin.py  config.py.sample  config_helpers.py  image_plugin.py  loader.py  owner_plugin.py  plugin.py  rafthercal-web.service  rafthercal.py  rafthercal.service  system_plugin.py  todo_plugin.py
src/rafthercal/templates/: base.rml  calendar.rml  default.rml  footer.rml  header.rml  main.rml  todo.rml
templates/: main.rml
